--- a/video_swing/help_jp.html
+++ b/video_swing/help_jp.html
@@ -68,7 +68,7 @@
             padding-left: 25px;
             padding-right: 25px;
             center;
-            font-size: 18px;
+            font-size: 26px;
             color: #ffffff;
         }
 
@@ -83,7 +83,7 @@
     <div id="wraper">
         <div id="header">
             <h1>
-                音ゲートレーニングアプリのヘルプ
+                音ゲートレーニングアプリ
             </h1>
         </div>
 
