ブログとアプリページを追加

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+    <meta http-equiv="Content-Script-Type" content="text/javascript" />
+    <title>hyoromo public info</title>
+    <meta name="keywords" content="hyoromo,ios,android" />
+    <link rel="stylesheet" href="index.css" type="text/css" />
+</head>
+
+<body>
+    <div id="outer">
+        <div id="header">
+            <div id="head-inner">
+                <h1>hyoromo public info</h1>
+            </div>
+        </div>
+        <div id="contents">
+            <h2>Blog</h2>
+            <p><a href="https://hyoromo.hatenablog.com/">https://hyoromo.hatenablog.com/</a></p>
+            <h2>iOS/Android Apps</h2>
+            <p><a href="https://hyoromo.github.io/apps/">https://hyoromo.github.io/apps/</a></p>
+        </div>
+        <div id="footer">©hyoromo</div>
+    </div>
+</body>
+
+</html>
