--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>hyoromo public info</title>
     <meta name="keywords" content="hyoromo,ios,android" />
     <link rel="stylesheet" href="index.css" type="text/css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5253715142491438"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
