--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
             <h2>iOS/Android Apps</h2>
             <p><a href="https://hyoromo.github.io/apps/">https://hyoromo.github.io/apps/</a></p>
         </div>
-        <div id="footer">©hyoromo</div>
+        <div id="footer">
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5253715142491438"
+                crossorigin="anonymous"></script>
+            <!-- Ad -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5253715142491438"
+                data-ad-slot="1443627342" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+            ©hyoromo
+        </div>
     </div>
 </body>
 
